tests/output/self_hosted/indent2_error.txt
tests/indent2_error.oomph:4: error: indentation must be a multiple of 4 spaces

          print("lol")
    ^^^^^^

